fixed incrementing score, deleted JS white space, deleted empty body css,formated read.me

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body{
-   
-}
-
 .title{
     position:absolute;
     left:40px;
